--- a/lecture_basics_class1.html
+++ b/lecture_basics_class1.html
@@ -16,6 +16,8 @@
 <body class="bg-slate-50 text-slate-900">
 
     <header class="gradient-bg text-white py-12 px-8 relative overflow-hidden">
+        <meta name="course-id" content="basics">
+        <meta name="class-id" content="01">
         <div class="absolute top-4 right-4 md:top-6 md:right-8 flex items-center gap-3 z-20">
             <span id="userEmailDisplay" class="text-sm text-white/90 font-medium hidden md:inline"></span>
             <a href="classroom_basics.html"
@@ -57,7 +59,7 @@
                                 <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-blue-600 text-white text-sm font-bold rounded-lg hover:bg-blue-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
-                                <button onclick="alert('자료실에서 PDF를 확인하세요.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
+                                <button data-title="LLM과 Transformer 구조" onclick="alert('등록된 자료가 없습니다.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
                                     <i class="fas fa-file-download"></i> PDF
                                 </button>
                             </div>
@@ -83,7 +85,7 @@
                                 <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white text-sm font-bold rounded-lg hover:bg-indigo-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
-                                <button onclick="alert('자료실에서 PDF를 확인하세요.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
+                                <button data-title="Token과 Context Window" onclick="alert('등록된 자료가 없습니다.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
                                     <i class="fas fa-file-download"></i> PDF
                                 </button>
                             </div>
@@ -109,7 +111,7 @@
                                 <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-violet-600 text-white text-sm font-bold rounded-lg hover:bg-violet-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
-                                <button onclick="alert('자료실에서 PDF를 확인하세요.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
+                                <button data-title="Zero-shot vs Few-shot" onclick="alert('등록된 자료가 없습니다.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
                                     <i class="fas fa-file-download"></i> PDF
                                 </button>
                             </div>
@@ -125,5 +127,6 @@
             else { document.getElementById('userEmailDisplay').innerText = user.email + "님 환영합니다"; }
         });
     </script>
+    <script type="module" src="./js/resource-loader.js"></script>
 </body>
 </html>
